Bug 1449401 - Remove moz-math-anonymous ua-only pseudo. r=heycam

We do not expose it nor ever style it. Just use the parent style all the
time. This avoids problematic style resolution calls during reflow.

Differential Revision: https://phabricator.services.mozilla.com/D84358