layout/style/nsCSSPseudoElementList.h
@@ -55,14 +55,6 @@ CSS_PSEUDO_ELEMENT(selection, ":selection",
 CSS_PSEUDO_ELEMENT(mozFocusInner, ":-moz-focus-inner", 0)
 CSS_PSEUDO_ELEMENT(mozFocusOuter, ":-moz-focus-outer", 0)
 
-// FIXME(emilio): It's unclear why this needs to exist at all, we don't ever
-// style them.
-//
-// This is a pseudo instead of an anon box because of how the
-// AdditionalComputedStyle APIs work.
-CSS_PSEUDO_ELEMENT(mozMathAnonymous, ":-moz-math-anonymous",
-  CSS_PSEUDO_ELEMENT_ENABLED_IN_UA_SHEETS)
-
 // HTML5 Forms pseudo elements
 CSS_PSEUDO_ELEMENT(mozNumberWrapper, ":-moz-number-wrapper",
                    CSS_PSEUDO_ELEMENT_SUPPORTS_USER_ACTION_STATE |
